--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <header>
 	<nav class="navbar navbar-expand-sm bg-1 fixed-top">
-	  <a class="navbar-brand" href="#home"><img src="/Users/ugne/Documents/Sandra/logo.png" alt="logo" style="width: 40px;"></a>
+	  <a class="navbar-brand" href="#home"><img src="" alt="logo" style="width: 40px;"></a>
 	  <ul class="nav navbar-nav">
 	    <li><a class="nav-link" href="#about">ABOUT</a></li>
 	    <li><a class="nav-link" href="#work">SERVICES</a></li>
